fixing header bugs on tablet view

--- a/src/css/base/_common.pcss
+++ b/src/css/base/_common.pcss
@@ -71,13 +71,3 @@ a {
     height: 100%;
     overflow-y: hidden;
 }
-
-.header__links, .positioned--right {
-    @media (--medium) {
-        right: pxtorem(-42, 12);
-    }
-
-    @media (--large) {
-        right: pxtorem(0, 14);
-    }
-}
